# DataDecider

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LOGBOOK.md  README.md  TRAINING_GUIDE.md  TYPE_SAFETY_GUIDE.md  pyproject.toml  requirements.txt  run_tokenizer_tests.sh
citations/: DataDecide.htm  OLMo.htm
configs/: dataset_registry.yaml  telemetry_config.yaml
configs/data_configs/: arxiv_shards.txt  data_curation.yaml
configs/model_configs/: olmo_150m.yaml  olmo_4m.yaml
configs/training_configs/: default_training.yaml  olmo_4m_training.yaml  test_4m_training.yaml
data/: README.md
data/tokenized/arxiv_demo/: metadata.json  tokenization_config.yaml
data/tokenized/finpile_lda/: metadata.json
data/tokenized/synthetic_demo/: metadata.json  tokenization_config.yaml
data/tokenized/synthetic_demo/train/: state.json
data/tokenized/synthetic_demo/validation/: state.json
data/tokenized/test_pool/: README.json
data/tokenized/test_pool/medium_10M/: metadata.json  tokenization_config.yaml
data/tokenized/test_pool/medium_10M/train/: state.json
data/tokenized/test_pool/medium_10M/validation/: state.json
data/tokenized/test_pool/small_1M/: metadata.json  tokenization_config.yaml
data/tokenized/test_pool/small_1M/train/: state.json
data/tokenized/test_pool/small_1M/validation/: state.json
data/tokenized/test_pool/tiny_100k/: metadata.json  tokenization_config.yaml
data/tokenized/test_pool/tiny_100k/train/: dataset_info.json  state.json
data/tokenized/test_pool/tiny_100k/validation/: state.json
data_decide/: __init__.py
data_decide/olmo/: README.md  __init__.py
data_decide/olmo/data/: __init__.py  data_curation.py  preprocessing.py
data_decide/olmo/evaluation/: __init__.py  evaluator.py
data_decide/olmo/models/: __init__.py  configuration_olmo.py  olmo_model.py
data_decide/olmo/training/: __init__.py  callbacks.py  optimization.py  trainer.py
data_decide/olmo/utils/: __init__.py  checkpoint_utils.py  config_utils.py  logging_utils.py
data_decide/scripts/: analyze_run.py  analyze_tokens_and_update_configs.py  build_4m_dataset.py  build_4m_dataset_fast.py  build_dataset_unified.py  check_dependencies.py  count_exact_tokens.py  count_tokens.py  count_tokens_unified.py  launch_distributed.sh  monitor_progress.py  monitor_training.py  prepare_training_data.py  quick_build_dataset.py  setup_wandb.py  test_4m_model.py  test_tokenization_e2e.py  token_count_results.json  train.py  train_4m_datadecide.sh  train_4m_enhanced.sh  train_enhanced.py  train_standalone.py  unified_tokenizer.py  update_all_configs.py  verify_dataset.py  verify_setup.py
data_decide/utils/: logging_utils.py  progress_manager.py  tokenized_dataset_loader.py  training_monitor.py  wandb_manager.py
docs/: DATADECIDER_CONTEXT.md  DOCS_CLEANUP_REPORT.md  FINPILECODE_MIGRATION.md  README.md  TRAINING_GUIDE.md  monitoring.md  tokenization.md  tokenization_improvements.md  tokenization_performance.md  tokenization_script_analysis.md  wandb-quickstart.md
docs/archive/cleanup_reports_2025_06/: AGGRESSIVE_CLEANUP_REPORT.md  CLEANUP_REPORT.md  DATA_DECIDE_CLEANUP_REPORT.md  SCRIPTS_CLEANUP_REPORT.md  SCRIPTS_CONSOLIDATION_REPORT.md  scripts_analysis_report.md
examples/: README.md  olmo_wrapper.py  train_olmo_gpu.py  train_olmo_pretokenized.py  train_olmo_with_telemetry.py  train_olmo_wrapper_gpu.py
examples/launch_scripts/: launch_tokenization.sh  train_4m_datadecide.sh  train_4m_enhanced.sh
examples/olmo_4m_gpu_output/: results.json
examples/olmo_4m_gpu_output/checkpoint-100/: config.json  rng_state.pth  scaler.pt  scheduler.pt  trainer_state.json
examples/olmo_4m_gpu_output/checkpoint-20/: scaler.pt  scheduler.pt  tokenizer.json  trainer_state.json
examples/olmo_4m_gpu_output/checkpoint-40/: scaler.pt  scheduler.pt  trainer_state.json
examples/olmo_4m_gpu_output/checkpoint-60/: generation_config.json  rng_state.pth  scaler.pt  scheduler.pt  trainer_state.json
examples/olmo_4m_gpu_output/checkpoint-80/: rng_state.pth  scaler.pt  scheduler.pt  trainer_state.json
scripts/: README_tokenization.md  benchmark_tokenization.py  check_finpile_progress.py  monitor_finpile_tokenization.py  monitor_progress.py  monitor_streaming.py  run_streaming_tokenization.sh  test_tokenization.py  test_tokenize_single_file.py  test_ultra_tokenization.py  tokenize_datasets.py  tokenize_finpile_enhanced.py  tokenize_finpile_extreme.py  tokenize_finpile_hybrid.py  tokenize_finpile_safe.sh  tokenize_finpile_streaming.py  tokenize_finpile_ultra.py  tokenize_unified.py
scripts/archived_scripts/: tokenize_finpile_hybrid.py
tests/: README.md  conftest.py  test_data_curation.py  test_data_curation_arxiv.py  test_real_data.py  test_tokenizer_components.py  test_tokenizer_data_integrity.py  test_unified_tokenizer.py
tests/test_data/: edge_cases.jsonl  sample_docs.jsonl  sample_text.txt
